<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <!-- tab1的整体布局 -->

    <LinearLayout
        android:id="@+id/tab1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- log行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/log" />

            <EditText
                android:id="@+id/tab1_log_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- IMEI行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/IMEI" />

            <EditText
                android:id="@+id/tab1_IMEI_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Current_Phone_Number 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Current_Phone_Number" />

            <EditText
                android:id="@+id/tab1_Current_Phone_Number_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Task 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Task" />

            <EditText
                android:id="@+id/tab1_Task_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Other_Phone_Number 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Other_Phone_Number" />

            <EditText
                android:id="@+id/tab1_Other_Phone_Number_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Call_length 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Call_length" />

            <EditText
                android:id="@+id/tab1_Call_length_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Failed 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Failed" />

            <EditText
                android:id="@+id/tab1_Failed_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Result 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Result" />

            <EditText
                android:id="@+id/tab1_Result_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- tab2的整体布局 -->

    <LinearLayout
        android:id="@+id/tab2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- log行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/log" />

            <EditText
                android:id="@+id/tab2_log_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- IMEI行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/IMEI" />

            <EditText
                android:id="@+id/tab2_IMEI_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Current_Phone_Number 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Current_Phone_Number" />

            <EditText
                android:id="@+id/tab2_Current_Phone_Number_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Task 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Task" />

            <EditText
                android:id="@+id/tab2_Task_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Other_Phone_Number 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Other_Phone_Number" />

            <EditText
                android:id="@+id/tab2_Other_Phone_Number_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- SMS_Content 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/SMS_Content" />

            <EditText
                android:id="@+id/tab2_SMS_Content_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Result 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Result" />

            <EditText
                android:id="@+id/tab2_Result_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- TEST 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_test"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/test" />
        </LinearLayout>
    </LinearLayout>

    <!-- tab3的整体布局 -->

    <LinearLayout
        android:id="@+id/tab3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!-- log行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/log" />

            <EditText
                android:id="@+id/tab3_log_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

 <!--        
        IMEI行

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/IMEI" />

            <EditText
                android:id="@+id/tab3_IMEI_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        Current_Phone_Number 行

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Current_Phone_Number" />

            <EditText
                android:id="@+id/tab3_Current_Phone_Number_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        Task 行

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Task" />

            <EditText
                android:id="@+id/tab3_Task_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>
 -->
        <!-- Wifi_Count 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Wifi_Count" />

            <EditText
                android:id="@+id/tab3_Wifi_Count_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- WebSpeed 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/WebSpeed" />

            <EditText
                android:id="@+id/tab3_WebSpeed_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- WebSite 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/WebSite" />

            <EditText
                android:id="@+id/tab3_WebSite_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Failed 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Failed" />

            <EditText
                android:id="@+id/tab3_Failed_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <!-- Result 行 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="3"
                android:gravity="center_horizontal"
                android:text="@string/Result" />

            <EditText
                android:id="@+id/tab3_Result_editText"
                android:layout_width="227dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <WebView
            android:id="@+id/browser_webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</FrameLayout>